Fix virtual scrollbar

--- a/cesta-do-jeruzalema/src/app/entry-list/entry-list.component.less
+++ b/cesta-do-jeruzalema/src/app/entry-list/entry-list.component.less
@@ -16,6 +16,15 @@
     height: 100%;
     width: 220px;
     border-top: 1px solid rgba(0,0,0,.12);
+
+    background:
+        linear-gradient(white 30%, hsla(0,0%,100%, 0)),
+        linear-gradient(hsla(0,0%,100%,0) 10px, white 70%) bottom,
+        radial-gradient(at top, rgba(0,0,0,0.2), transparent 70%),
+        radial-gradient(at bottom, rgba(0,0,0,0.2), transparent 70%) bottom;
+    background-repeat:no-repeat;
+    background-size: 100% 20px, 100% 20px, 100% 5px, 100% 7px;
+    background-attachment:local, local, scroll, scroll;
 }
 
 .entry {
